source-ip-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: source-ip
  labels:
    name: source-ip
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    name: source-ip
