ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  backend:
    serviceName: default-http-backend
    servicePort: 80
  rules:
    - host: a7ffc0dd1cfd611e89c590253580379b-648307740.us-west-2.elb.amazonaws.com
      http:
        paths:
        - path: /test
          backend:
            serviceName: source-ip
            servicePort: 80
